add padding and margin examples

--- a/lesson-2/index.html
+++ b/lesson-2/index.html
@@ -22,6 +22,7 @@
     <h1>RGBA</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In ullam nam voluptate nemo? Nisi accusantium porro rem qui. Quam perspiciatis, excepturi modi ducimus sit corrupti ad iure fuga, assumenda eligendi facere expedita dignissimos omnis distinctio dolorum ea dolores maxime alias nulla. Nesciunt quos quam nihil fugiat, ut laudantium? Porro doloremque ad hic, voluptas necessitatibus consequuntur sit laboriosam suscipit rerum velit, veniam repudiandae qui. Magni reprehenderit ipsam obcaecati aliquam sint recusandae quas! Ad enim nihil distinctio ea porro qui quaerat voluptatum incidunt fuga unde. At quidem incidunt culpa, fugiat magnam nemo asperiores similique nisi numquam fuga debitis modi, earum ratione necessitatibus.</p>
     <h1>RGBA</h1>
+    <button class="css-box-model">Button</button>
 
     <ul class="pink">
         <li>list item</li>
