--- a/project-final/index.html
+++ b/project-final/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,19 +8,21 @@
     <title>Яхтклуб.web</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap" rel="stylesheet">
-    
-<link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+
 <body>
     <div id="text1">
-    <button class="css-box-model"><a href="abal.html">О нас</a></button>
+        <button class="css-box-model"><a href="about.html">О нас</a></button>
     </div>
     <h1>Яхтк. "Парус из рубашки"</h1>
     <div>
         <p>Lorem ipsum dolor sit amet.</p>
     </div>
-    
+
 </body>
+
 </html>
