--- a/project-final/index.html
+++ b/project-final/index.html
@@ -12,11 +12,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="mystyles.css">
 </head>
 
 <body>
     <div id="text1">
-        <button class="css-box-model"><a href="about.html">О нас</a></button>
+        <a class="css-box-model" href="about.html">О нас</a>
     </div>
     <h1>Яхтк. "Парус из рубашки"</h1>
     <div>
