add-project-final

--- a/project-final/index.html
+++ b/project-final/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div id="text1">
-    <button class="css-box-model"><a href="abal.html">О нас</a></button>
+     <a class="css-box-model" href="about.html">О нас</a>
     </div>
     <h1>Яхтк. "Парус из рубашки"</h1>
     <div>
