--- a/project-final/about.html
+++ b/project-final/about.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" type="text/css" href="mystyles.css">
 </head>
 <body>
-     <button class="css-box-model"><a href="index.html">Home</a></button>
+<div class=container>
+    <a class="css-box-model" href="index.html">Home</a>
    <h1>О нас</h1>
     <img src="foto25-02.jpg" alt="photo of the yacht club"  width="500px">
     <div class="text-color">
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis repellendus quae eos. Eligendi vel ducimus magnam, accusamus sit alias commodi doloremque est itaque ut reiciendis et cum praesentium voluptatibus ipsum laudantium, atque nam tempora maxime delectus ipsa. Maxime perspiciatis nobis magnam quisquam porro illo repellendus alias atque, et facere a consequatur tempore exercitationem voluptates, eligendi minus nisi quibusdam nostrum corrupti repellat amet! Officia nobis quisquam accusamus quasi corporis harum aut, ducimus ea, impedit, quidem dolore quam error earum ad quibusdam vero inventore eius tempora alias! Quia tempora ducimus ipsam optio, quidem odio expedita distinctio, itaque neque qui eos minus cum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis repellendus quae eos. Eligendi vel ducimus magnam, accusamus sit alias commodi doloremque est itaque ut reiciendis et cum praesentium voluptatibus ipsum laudantium, atque nam tempora maxime delectus ipsa. Maxime perspiciatis nobis magnam quisquam porro illo repellendus alias atque, et facere a consequatur tempore exercitationem voluptates, eligendi minus nisi quibusdam nostrum corrupti repellat amet! Officia nobis quisquam accusamus quasi corporis harum aut, ducimus ea, impedit, quidem dolore quam error earum ad quibusdam vero inventore eius tempora alias! Quia tempora ducimus ipsam optio, quidem odio expedita distinctio, itaque neque qui eos minus cum.</p>
     </div>
+</div> 
 </body>
 </html>
