add-project-final

--- a/project-final/index.html
+++ b/project-final/index.html
@@ -16,6 +16,9 @@
     <div id="text1">
      <a class="css-box-model" href="about.html">О нас</a>
     </div>
+    <div id="text2">
+        <a class="css-box-model" href="instructors.html">instructors</a>
+    </div>
     <h1>Яхтк. "Парус из рубашки"</h1>
     <div>
         <p>Lorem ipsum dolor sit amet.</p>
