add-project-final

--- a/project-final/index.html
+++ b/project-final/index.html
@@ -12,18 +12,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="nav.css">
     <link rel="stylesheet" type="text/css" href="mystyles.css">
 </head>
 
 <body>
-    <div id="text1">
-     <a class="css-box-model" href="about.html">О нас</a>
+    <div class="nav-menu">
+        <span class="logo-text">Яхтк. "Парус из рубашки"</span>
+        <div>
+            <a class="button" href="about.html">О нас</a>
+            <a class="button" href="instructors.html">instructors</a>
+        </div>
+
     </div>
-    <div id="text2">
-        <a class="css-box-model" href="instructors.html">instructors</a>
-        <a class="css-box-model" href="about.html">О нас</a>
-    </div>
-    <h1>Яхтк. "Парус из рубашки"</h1>
+
     <div>
         <p>Lorem ipsum dolor sit amet.</p>
     </div>
