--- a/project-final/pages/about.html
+++ b/project-final/pages/about.html
@@ -6,14 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about us</title>
-    <link rel="stylesheet" type="text/css" href="mystyles.css">
-    <link rel="stylesheet" type="text/css" href="about-flex.css">
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 
 <body>
-    <button class="css-box-model"><a href="index.html">Home</a></button>
+    <div class="nav-menu">
+        <span class="logo-text">Яхтк. "Парус из рубашки"</span>
+        <div>
+            <a class="button" href="/index.html">Home</a>
+            <a class="button" href="/pages/about.html">О нас</a>
+            <a class="button" href="/pages/instructors.html">instructors</a>
+        </div>
+    </div>
+
     <div class="container">
-        <img class="image" src="foto25-02.jpg" alt="photo of the yacht club" width="500px">
+        <img class="image" src="/img/foto25-02.jpg" alt="photo of the yacht club" width="500px">
         <div class="text-color">
             <h1>О нас</h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis repellendus quae eos. Eligendi vel
