--- a/project-final/pages/instructors.html
+++ b/project-final/pages/instructors.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Яхтклуб.web</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap" rel="stylesheet">
-
+    <title>about us</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
-
 <body>
     <div class="nav-menu">
         <span class="logo-text">Яхтк. "Парус из рубашки"</span>
@@ -23,11 +16,5 @@
             <a class="button" href="/pages/instructors.html">instructors</a>
         </div>
     </div>
-
-    <div>
-        <p>Lorem ipsum dolor sit amet.</p>
-    </div>
-
 </body>
-
 </html>
