--- a/project/index.html
+++ b/project/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about us</title>
-    <link rel="stylesheet" type="text/css" href="myst.css">
+    <title>Document</title>
 </head>
+
 <body>
-    <div class=container>
-        <a class="css-box-model" href="index.html">Home</a>
-       <h1>instructors</h1>
-      
-    </div> 
-    
+    main page
 </body>
+
 </html>
